[package]
name = "zk-6358-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { path = "../plonky2/plonky2" }               # https://github.com/xiyu1984/plonky2
plonky2_ecdsa = {path = "../plonky2-ecdsa"}             # https://github.com/xiyu1984/plonky2-ecdsa
plonky2_keccak256 = {path = "../plonky2-keccak256"}     # https://github.com/kay404/plonky2-keccak256/tree/xy-dev
plonky2_u32 = {path = "../plonky2-u32"}                 # https://github.com/xiyu1984/plonky2-u32

zk-6358 = { path = "../zk-6358" }                    # https://github.com/Omniverse-Web3-Labs/zk-6358/        # private currently
zk-6358-prover = { path = "../zk-omni-executor/zk-6358-prover"}     # https://github.com/Omniverse-Web3-Labs/zk-omni-executor/        # private currently
cached-smt-db ={ path = "../zk-omni-executor/cached-smt-db"}
circuit-local-storage ={ path = "../zk-omni-executor/circuit-local-storage"}
exec-system = {path = "../zk-omni-executor/exec-system"}
interact  ={ path = "../zk-omni-executor/interact"}
crypto ={ path = "../zk-omni-executor/crypto"}

fri-kzg-verifier = { path = "../fri-kzg-verifier"}                      # https://github.com/Omniverse-Web3-Labs/fri-kzg-verifier/ 
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0" }
semaphore_aggregation ={ path = "../community/stark-verifier" }         # https://github.com/xiyu1984/stark-verifier
halo2_solidity_verifier = {path="../community/halo2-solidity-verifier", features=["evm"]}       # https://github.com/xiyu1984/halo2-solidity-verifier

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
itertools = { version = "0.11.0", default-features = false }
anyhow = { version = "1.0.40", default-features = false }
log = "0.4.14"
colored = "2.0.0"
clap ={ version = "4.5.4"}
rustyline ={ version = "14.0.0"}
chrono = { version = "0.4"}
num = { version = "= 0.4.3", default-features = false }
rand = { version = "0.8.5", default-features = false }

tokio = { version = "1" , features = ["full"]}
rayon = "1.9.0"


[features]
mocktest = []